initial implementation of Album data
Still some work to do DRYing client and server code where playlist and album logic overlaps
